--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ ol {
   list-style: none;
 }
 
-/* Кастомный скроллбар */
+/* РљР°СЃС‚РѕРјРЅС‹Р№ СЃРєСЂРѕР»Р»Р±Р°СЂ */
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
 }
@@ -48,4 +48,227 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.content {
+  margin: 133px 30px;
+  height: 534px;
+  display: grid;
+  grid-template-columns: 711px 399px;
+  gap: 30px;
+}
+
+.content__details {
+  grid-column: 2;
+}
+
+.result {
+  grid-column: 1;
+}
+
+.result__video-container {
+  position: relative;
+  margin: 78px 0 16px;
+  width: 100%;
+  height: 386px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.search-form {
+  display: flex;
+  gap: 40px;
+  height: 54px;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__fieldset-title {
+  font-family: Fira Sans Condensed;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+  letter-spacing: 0;
+}
+
+.search-form__label-text {
+  font-family: Fira Sans Condensed;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+  letter-spacing: 0;
+}
+
+.search-form__textfield {
+  background-color: transparent;
+  font-family: inherit;
+  font-size: inherit;
+  width: 225px;
+  height: 27px;
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+}
+
+.search-form__textfield::placeholder {
+  color: rgb(255, 255, 255, 0.7)
+}
+
+.search-form__textfield:active {
+  border-right-color: #fff;
+  border-left-color: #fff;
+}
+
+.search-form__label:has(:not(:active):focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.search-form__label{ 
+  display: inline;
+}
+
+.search-form__checkbox-list {
+  width: 212px;
+  height: 22px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+}
+
+.search-form__label {
+  display: flex;
+  gap: 5px;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  block-size: 19px;
+  inline-size: 19px;
+  border: 1px solid #fff;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: '';
+  min-inline-size: 15px;
+  min-block-size: 15px;
+  background-color: #fff;
+}
+
+.button {
+  width: 100%;
+  height: 34px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  margin-top: auto;
+  padding: 0;
+  font-family: Fira Sans Condensed;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21.6px;
+  letter-spacing: 0;
+  text-align: center;
+}
+
+.button:focus-visible {
+  outline: none;
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.button:active { 
+  background-color: #545050;
+}
+
+.content__card-link {
+  text-decoration: none;
+}
+
+.content__video-card-description-container{ 
+  flex-grow: 1;
+}
+
+.content__video-card-title {
+  font-family: Oswald;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.content__video-card-description{ 
+  color: #fff;
+  font-family: Fira Sans Condensed;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
+  letter-spacing: 0;  
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card:hover .content__video-card-description-container {
+  text-decoration: underline;
+  text-decoration-color: #fff;
+}
+
+.content__video-card:active .content__video-card-description-container {
+  background-color: #545050;
+}
+
+.content__list-container {
+  height: 298px;
+  overflow-y: scroll;
+}
+
+.title { 
+  font-family: Oswald;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 70.5px;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  margin-bottom: 26px; 
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
 }
