--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,6 @@ ol {
   list-style: none;
 }
 
-/* РљР°СЃС‚РѕРјРЅС‹Р№ СЃРєСЂРѕР»Р»Р±Р°СЂ */
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
 }
@@ -62,7 +61,6 @@ ol {
 
 .content {
   margin: 133px 30px;
-  height: 534px;
   display: grid;
   grid-template-columns: 711px 399px;
   gap: 30px;
@@ -87,6 +85,7 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -100,15 +99,16 @@ ol {
 }
 
 .search-form__fieldset-title {
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed' 'Arial' sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21.6px;
-  letter-spacing: 0;
+  letter-spacing: 0%;
+
 }
 
 .search-form__label-text {
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed' 'Arial' sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21.6px;
@@ -116,6 +116,7 @@ ol {
 }
 
 .search-form__textfield {
+  color: rgb(255, 255, 255, 0.7);
   background-color: transparent;
   font-family: inherit;
   font-size: inherit;
@@ -144,6 +145,11 @@ ol {
 .search-form__label:has(:not(:active):focus-visible) {
   outline: 1px solid #fff;
   outline-offset: 2px;
+}
+
+.search-form__label:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .search-form__checkbox-list {
@@ -201,12 +207,17 @@ ol {
   background-color: #545050;
 }
 
+.button:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .content__card-link {
   text-decoration: none;
 }
 
-.content__video-card-description-container { 
-  flex-grow: 1;
+.content__list-item:has(.content__card-link_current) .content__video-card-description-container { 
+  background-color: #545050;
 }
 
 .content__video-card-title {
@@ -217,6 +228,9 @@ ol {
   letter-spacing: 0;
   text-transform: uppercase;
   color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-description { 
@@ -247,6 +261,7 @@ ol {
 .content__list-container {
   height: 298px;
   overflow-y: scroll;
+  position: relative;
 }
 
 .title { 
@@ -264,7 +279,11 @@ ol {
 }
 
 .content__video-card {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 196px 194px;
   margin-bottom: 30px;
 }
+
+.content__list-container:has(.preloader) { 
+  overflow: hidden;
+} 
