--- a/styles/style.css
+++ b/styles/style.css
@@ -99,16 +99,15 @@ ol {
 }
 
 .search-form__fieldset-title {
-  font-family: 'Fira Sans Condensed' 'Arial' sans-serif;
+  font-family: 'Fira Sans Condensed', 'Arial', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21.6px;
-  letter-spacing: 0%;
-
+  letter-spacing: 0;
 }
 
 .search-form__label-text {
-  font-family: 'Fira Sans Condensed' 'Arial' sans-serif;
+  font-family: 'Fira Sans Condensed', 'Arial', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21.6px;
