Исправил замечания ревьюера

--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,6 @@ ol {
 .search-form {
   display: flex;
   gap: 40px;
-  height: 54px;
 }
 
 .search-form__fieldset {
@@ -188,7 +187,7 @@ ol {
   color: #fff;
   margin-top: auto;
   padding: 0;
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed', 'Arial', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 21.6px;
@@ -259,7 +258,7 @@ ol {
 
 .content__list-container {
   height: 298px;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: relative;
 }
 
